Add contact form

--- a/index.html
+++ b/index.html
@@ -152,6 +152,36 @@
           </div>
         </div>
 
+        <!-----------------Contact Form section-------------------->
+
+        <section class="">
+            <h3 class="">Contact me</h3>
+            <p class="">If you have an application you are interested in developing, a feature that you
+                need built or a project that needs coding. I’d love to help with it!</p>
+            <div class="">
+                <form action="https://formspree.io/f/xyzxyzxyz" method="POST">
+                    <ul class="form-list">
+                        <li>
+                            <input class="first-name" type="text" name="fullname" maxlength="30" minlength="2"
+                         placeholder="Lorem Ipsum" required>
+
+                        </li>
+                        <li>
+                            <input class="first-name" type="email" name="email" placeholder="loremipsum@gmail.com" required>
+                            
+                        </li>
+                        <li>
+                            <textarea class="contact-textarea" name="message" id="" required cols="30" rows="10"
+                                placeholder="Write your message here..." maxlength="500"></textarea>
+                        </li>
+                    </ul>
+                  
+                    <button class="">Get in touch</button>
+                </form>
+            </div>
+        </section>
+
+
       </div>
 
     </div>
