Add Bootstrap to contact form

--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
 
         <!-----------------Contact Form section-------------------->
 
-        <section class="">
-            <h3 class="">Contact me</h3>
-            <p class="">If you have an application you are interested in developing, a feature that you
+        <section class="d-flex flex-column justify-content-center">
+            <h3 class="text-white">Contact me</h3>
+            <p class="text-white">If you have an application you are interested in developing, a feature that you
                 need built or a project that needs coding. I’d love to help with it!</p>
-            <div class="">
+            <div class="forms">
                 <form action="https://formspree.io/f/xyzxyzxyz" method="POST">
                     <ul class="form-list">
                         <li>
@@ -176,7 +176,7 @@
                         </li>
                     </ul>
                   
-                    <button class="">Get in touch</button>
+                    <button class="btn btn-primary mt-3" style="width: 140px; margin-left: 44%">Get in touch</button>
                 </form>
             </div>
         </section>
